# MeshConverter

./: .gitignore  CMakeLists.txt  CMake_Generator_Mismatch_Solution.md  ENVIRONMENT_SETUP.md  README.md  网格格式转换工具后端接口文档.md  网格格式转换工具后端项目计划.md
.trae/documents/: 网格格式转换工具后端开发实施计划.md
QtTransformApp/: CMakeLists.txt
QtTransformApp/include/: transform.h
QtTransformApp/src/: main.cpp  transform.cpp
QtTransformApp/view/: transform.ui
examples/: CMakeLists.txt  CommandLineTool.cpp  ConvertExample.cpp  MeshReaderCellDataTest.cpp  MeshReaderTest.cpp  VTKConverterTest.cpp
include/: MeshConverter.h  MeshException.h  MeshHelper.h  MeshProcessor.h  MeshReader.h  MeshTypes.h  MeshWriter.h  VTKConverter.h
src/: MeshConverter.cpp  MeshException.cpp  MeshHelper.cpp  MeshProcessor.cpp  MeshReader.cpp  MeshTypes.cpp  MeshWriter.cpp  VTKConverter.cpp
tests/: CMakeLists.txt
tests/unit/: MeshTypesTest.cpp
